# bg_neuralnet

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_main.cpp
